Fix home formatting issue on Mobile

--- a/src/app/components/pages/home/home.component.css
+++ b/src/app/components/pages/home/home.component.css
@@ -45,7 +45,13 @@
   }
 
   .services__container {
-    display: block;
+    /*display: block;*/
+  }
+
+  .content__container {
+    /*margin-top: 3rem;*/
+    margin-top: 50vh;
+    transform: translateY(-50%);
   }
 }
 
@@ -53,7 +59,6 @@
 @media only screen and (max-width: 1023px) {
   .content__container {
     max-width: 45rem;
-    margin-top: 3rem;
   }
 }
 
